<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tabhome">首页</string>
    <string name="tabservice">全部服务</string>
    <string name="tabenviroment">智慧环保</string>
    <string name="tabNews">新闻</string>
    <string name="tabpersonal">个人中心</string>
    <string name="login_name">登录</string>
    <string name="welcome_to_coffeeonline_system">欢迎来到智慧商城项目</string>
    <string name="app_name">智慧城市</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">立即登录</string>
    <string name="get_captcha">获取验证码</string>
    <string name="phone_number">手机号码</string>
    <string name="success">注册成功</string>
    <string name="login_now">现在登录</string>
    <string name="new_password">新密码</string>
    <string name="verify_phone">验证</string>
    <string name="finish">完成</string>
    <string name="captcha">验证码</string>
    <string name="find_password">找回密码</string>
    <string name="integral_rule">注：100积分=1元抵值劵，1000积分=10元抵值劵（抵值劵只能在此APP上进行使用，不支持抵值劵提现）</string>
    <string name="login_or_register">登录/注册</string>
    <string name="forgetpwd"><a href="">忘记密码</a></string>
    <string name="register"><a href="">暂无账号，立即注册</a></string>
    <string name="reg_userName">请输入用户名</string>
    <string name="reg_userPass">输入密码</string>
    <string name="reg_userPassRe">再次输入密码</string>

    <string name="reg_btnReg">注册</string>

    <string name="reg_phone">手机号：</string>

    <string name="boy">男</string>

    <string name="gril">女</string>
    <string name="title_activity_register1">Register1Activity</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_shop_detail">ShopDetailActivity</string>
    <string name="txt_feedback_textarea">让吐槽来的更猛烈些吧</string>
    <string name="txt_your_name_phone_email">您的姓名、手机、邮箱等</string>
    <string name="developer_qq">意见反馈QQ：2695118008</string>
    <string name="developer_email">意见反馈邮箱：zhangshengjian@163.com</string>
    <string name="search">搜索商品/品牌/种类</string>
    <string name="go_to_home">到首页去看看</string>
    <string name="you_have_not_selected">还没有选择商品</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>
    <string name="title_activity_coffee_cultrue">CoffeeCultrueActivity</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="title_activity_update_shop">UpdateShopActivity</string>
    <string name="title_activity_add_shop">AddShopActivity</string>
    <string name="education">请选择学历</string>
    <string name="positon">期望职位</string>
    <string-array name="edu">
        <item>请选择最高学历</item>
        <item>专科生</item>
        <item>本科生</item>
        <item>研究生</item>
        <item>博士生</item>
    </string-array>
    <string-array name="positioncontent">
        <item>请选择期望职位 </item>
        <item>java开发工程师</item>
        <item>设计</item>
        <item>外教</item>
        <item>前端工程师</item>
        <item>牙医</item>
        <item>全栈开发工程师</item>
    </string-array>
    <!-- Strings used for fragments for navigationyangguang -->

    <string name="title_activity_car_query_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_query_car_main">MainActivity</string>
    <string name="title_activity_query_car">MainActivity</string>
    <string name="title_activity_main11">MainActivity11</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_car_query">MainActivity</string>
    <string name="title_activity_main_test">MainActivityTest</string>
    <string name="title_activity_car_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="notification">预约须知</string>
    <string name="check">立即预约</string>
    <string name="reservation">我的预约</string>
    <string name="management">车辆管理</string>
    <string name="add_car_info">添加车辆信息</string>
    <string name="title_activity_job_main">JobMainActivity</string>
    <string name="tab_text_job">找工作</string>
    <string name="tab_text_job_post">投递记录</string>
    <string name="tab_text_job_resume">个人简历</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="car_movement">自助移车</string>
    <string name="car_movement_history">历史记录</string>
    <string name="clean">Clean</string>
</resources>
