
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.RegActivity" >
    <include layout="@layout/header"/>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:visibility="gone"-->
<!--        android:text="注册新用户" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView_avater"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="96dp"-->
<!--        app:srcCompat="@android:mipmap/sym_def_app_icon" />-->

    <EditText
        android:id="@+id/RegUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_userName"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/RegPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reg_userPass"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/RegPassWordAg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reg_userPassRe"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/RegNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="输入昵称"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />
    <EditText
        android:id="@+id/RegPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入电话号码"
        android:inputType="phone"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入email"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:ems="10" />
    <EditText
        android:id="@+id/editText_idcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入身份证号"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:ems="10" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="请选择性别"/>

    <RadioGroup
        android:id="@+id/RegSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
    	android:layout_marginRight="16dp"
    	android:layout_marginTop="12dp"
    	android:orientation="horizontal"
         >
    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:textSize="20sp"
        android:text="男"
        android:textColor="#A9A9A9"
        android:button="@null"
        android:drawableLeft="@drawable/male"
        android:checked="true"
         />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A9A9A9"
        android:textSize="20sp"
        android:layout_marginLeft="36dp"
        android:button="@null"
        android:drawableLeft="@drawable/female"
        android:text="女" />

    </RadioGroup>



    <Button
        android:id="@+id/RegBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/button_dra"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/reg_btnReg" />

</LinearLayout>
